--- a/app/assets/stylesheets/application.scss
+++ b/app/assets/stylesheets/application.scss
@@ -57,3 +57,13 @@ div.review-image {
   margin-right: auto;
   margin-left: auto;
 }
+.dino-management {
+  margin-top: 10px;
+}
+
+.tally {
+  font-size: 12pt;
+}
+.vote-button-list {
+  list-style-type: none;
+}
