--- a/app/assets/stylesheets/comments.css
+++ b/app/assets/stylesheets/comments.css
@@ -2,6 +2,7 @@
   background-color: #888;
   color: white;
   padding: 5px;
+  padding-bottom: 30px;
   font-size: 10pt;
   box-shadow: 8px 8px 8px #777;
   padding-top: 15px;
@@ -17,4 +18,7 @@
   font-weight: bold;
   color: #fff;
   margin-left: 60px;
+}
+.comment-row {
+  padding: 10px 0px;
 }
