--- a/app/assets/stylesheets/reviews.css
+++ b/app/assets/stylesheets/reviews.css
@@ -13,6 +13,7 @@
   box-shadow: 8px 8px 8px #777;
 }
 .review-box {
+  margin-top: 5px;
   background-color: #888;
   color: white;
   padding: 5px;
