--- a/app/views/dinosaurs/show.html.erb
+++ b/app/views/dinosaurs/show.html.erb
@@ -6,7 +6,7 @@
     <p> <%= link_to "See More", @dinosaur.info_url %></p>
   </div>
   <div class="dino-image large-5 columns end">
-    <%= image_tag "giganotosaurus.jpg" %>
+    <%= image_tag @dinosaur.dino_photo %>
   </div>
 </div>
 <div class="row">
