--- a/app/views/dinosaurs/edit.html.erb
+++ b/app/views/dinosaurs/edit.html.erb
@@ -17,6 +17,10 @@
     <%= form.label :description, class: "text-input-label" %><br>
     <%= form.text_field :description, class: "text-input-field", placeholder: @dinosaur.description%>
   </div>
+  <div class="field column small-12">
+    <%= form.label :dino_photo, "Dino Photo", class: "text-input-label" %><br>
+    <%= form.file_field :dino_photo %>
+  </div>
   <br>
   <div class="actions">
     <%= form.submit "Change this dinosaur!", class: "dino-crud-buttons button expand round medium" %>
