--- a/app/assets/stylesheets/reviews.css
+++ b/app/assets/stylesheets/reviews.css
@@ -10,11 +10,12 @@
   margin: 10px;
   padding-bottom: 10px;
   background-color: #999;
+  background-image: url("dino-wallpaper.jpg");
   box-shadow: 8px 8px 8px #777;
 }
 .review-box {
   margin-top: 5px;
-  background-color: #888;
+  background-color: #D0C8BA;
   color: white;
   padding: 5px;
   font-size: 10pt;
