--- a/app/assets/stylesheets/comments.scss
+++ b/app/assets/stylesheets/comments.scss
@@ -1,5 +1,7 @@
+@import 'sass/colors';
+
 .comments {
-  background-color: #D0C8BA;
+  background-color: $jade;
   color: white;
   padding: 5px;
   padding-bottom: 30px;
