--- a/app/assets/stylesheets/reviews.scss
+++ b/app/assets/stylesheets/reviews.scss
@@ -1,3 +1,5 @@
+@import 'sass/colors';
+
 .review-info {
   margin-left: 20px;
   font-size: 10pt;
@@ -15,7 +17,7 @@
 }
 .review-box {
   margin-top: 5px;
-  background-color: #D0C8BA;
+  background-color: $jade;
   color: white;
   padding: 5px;
   font-size: 10pt;
