--- a/app/views/dinosaurs/show.html.erb
+++ b/app/views/dinosaurs/show.html.erb
@@ -37,7 +37,7 @@
                 <%= image_tag r.user.profile_photo, class: "review-user-thumb" %>
               </a>
               <% r.rating.times do %>
-                <%= image_tag "dino-rating.jpg", size: "25x25", class:"rating-image"%>
+                <%= image_tag "dino-rating.png", size: "25x25", class:"rating-image"%>
               <% end %>
             </div>
             <div class="review-body"><%= r.body %></div>
