--- a/app/assets/stylesheets/sass/_colors.scss
+++ b/app/assets/stylesheets/sass/_colors.scss
@@ -1,7 +1,7 @@
 $gray: #e0dfd9;
 $jade: #b5bcb5;
 $yellow: #928b40;
-$purple: #BAADBA;
+$purple: #baadba;
 $green: #718872;
 $blue: #797fb2;
 $white: #f5f1e9;
