added title, commented out mailers, general cleanup

--- a/app/views/dinosaurs/index.html.erb
+++ b/app/views/dinosaurs/index.html.erb
@@ -1,3 +1,8 @@
+<div class="row">
+  <div class="index-title column text-center">
+    <h1>◈ EXPLORASAURUS ◈</h1>
+  </div>
+</div>
 <div class="slide-show columns large-centered">
   <div class="">
     <%= image_tag "dinosaur2.jpg"%>
@@ -36,7 +41,7 @@
     (66 million years ago), when the Cretaceous–Paleogene extinction event led
     to the extinction of most dinosaur groups (and three-quarters of plant and
     animal species on Earth) ending the Mesozoic Era.
-    <%= link_to "Source", "https://en.wikipedia.org/wiki/Dinosaur" %>
+    <%= link_to "(Source)", "https://en.wikipedia.org/wiki/Dinosaur" %>
   </p>
 </div>
 <h1>List of Dinosaurs:</h1>
