--- a/app/views/dinosaurs/show.html.erb
+++ b/app/views/dinosaurs/show.html.erb
@@ -24,8 +24,8 @@
     <% end %>
   <% end %>
 </div>
-
-<h4>Reviews for <%= @dinosaur.name %></h4>
+<% if @reviews.present? %>
+  <h4>Reviews for <%= @dinosaur.name %></h4>
   <div class="reviews row">
     <% @reviews.each do |r| %>
       <% @review = r %>
@@ -92,6 +92,9 @@
     <% end %>
     <%= paginate @reviews %>
   </div>
+<% else %>
+  <h4> No Reviews Yet</h4>
+<% end %>
 
 <% if user_signed_in?  %>
   <div class="row">
