--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -1,7 +1,7 @@
 <!DOCTYPE html>
 <html>
 <head>
-  <title>Dinosaurs</title>
+  <title>Explorasaurus</title>
   <%= stylesheet_link_tag 'application', media: 'all' %>
   <%= csrf_meta_tags %>
   <link href='https://fonts.googleapis.com/css?family=Poiret+One' rel='stylesheet' type='text/css'>
@@ -13,7 +13,7 @@
     <section class="top-bar-section">
       <ul class="title-area">
         <li class="name">
-          <h1><%= link_to "Dinosaurs", root_path %></h1>
+          <h1><%= link_to "Explorasaurus", root_path %></h1>
         </li>
       </ul>
         <%- if current_user -%>
