readme updates and minimal styling

--- a/app/views/users/show.html.erb
+++ b/app/views/users/show.html.erb
@@ -3,7 +3,7 @@
 </h1>
 <div class="row">
   <div class="column small-4">
-    <%= image_tag(current_user.profile_photo, class: "th") %>
+    <%= image_tag(@user.profile_photo, class: "th") %>
   </div>
   <div class="column small-8">
     <p>
