readme and styling

--- a/app/assets/stylesheets/reviews.scss
+++ b/app/assets/stylesheets/reviews.scss
@@ -12,7 +12,7 @@
   margin: 10px;
   padding-bottom: 10px;
   background-color: #999;
-  background-image: url("dino-wallpaper.jpg");
+  background-image: asset-url("dino-wallpaper.jpg");
   box-shadow: 8px 8px 8px #777;
 }
 .review-box {
